# movieassistant

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/app/: main.py  schemas.py  settings.py
api/app/agents/: __init__.py  orchestrator.py  responder.py
api/app/api/: __init__.py  routes.py
api/app/integrations/: __init__.py  tmdb_client.py
api/app/llm/: __init__.py  agent.py  candidate_selector.py  client.py  evaluator_agent.py  input_agent.py  model_provider.py  movie_finder_agent.py  prompt.py  prompts.py  rag_agent.py  recommendation_agent.py  state.py  workflow.py
api/app/llm/workflow/: __init__.py  formatters.py  graph_builder.py  nodes.py  routing.py
api/app/observability/: __init__.py  langsmith.py
api/app/rag/: __init__.py  ingest.py  retriever.py
api/app/rag/knowledge_base/: data_sources.md  evaluation_logic.md  known_limitations.md  recommendation_rules.md  routing_logic.md  system_overview.md
api/app/schemas/: __init__.py  chat.py  domain.py  orchestrator.py
api/test/: conftest.py  test_domain.py  test_evaluator_agent.py  test_input_agent.py  test_main.py  test_movie_finder.py  test_observability.py  test_rag.py  test_recommendation_agent.py  test_search_query.py  test_state.py  test_tmdb_client.py  test_tmdb_client_extended.py  test_workflow.py  test_workflow_evaluator.py  test_workflow_integration.py  test_workflow_nodes.py  test_workflow_rag.py  test_workflow_routing.py
ui/: Dockerfile  pyproject.toml
ui/app/: streamlit_app.py
